<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black"
    tools:context=".ConfigActivity">

    <TextView
        android:id="@+id/config_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="@string/title_config"
        android:textColor="@color/imperial_yellow"
        android:textSize="32sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:id="@+id/button_lang_container"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="48dp"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/config_title">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/label_language"
            android:textColor="@color/white"
            android:textSize="24sp"
            android:layout_marginEnd="24dp"/>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_lang_prev"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:text="&lt;"
            android:background="@drawable/btn_retro_classic"
            android:textColor="@color/black"
            android:textStyle="bold" />

        <ImageView
            android:id="@+id/img_flag"
            android:layout_width="40dp"
            android:layout_height="30dp"
            android:layout_marginHorizontal="12dp"
            android:scaleType="centerInside"
            android:src="@drawable/flag_br" />

        <TextView
            android:id="@+id/text_lang_name"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:text="@string/lang_pt"
            android:textColor="@color/white"
            android:textSize="18sp"
            android:gravity="center" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_lang_next"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:text="&gt;"
            android:background="@drawable/btn_retro_classic"
            android:textColor="@color/black"
            android:textStyle="bold" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/extra_configs_container"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:orientation="horizontal"
        app:layout_constraintTop_toBottomOf="@id/button_lang_container"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <CheckBox
            android:id="@+id/check_sound"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/label_sound"
            android:textColor="@color/white"
            android:buttonTint="@color/imperial_blue"
            android:layout_marginEnd="32dp" />

        <CheckBox
            android:id="@+id/check_shake"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/label_shake"
            android:textColor="@color/white"
            android:buttonTint="@color/imperial_blue" />

        <CheckBox
            android:id="@+id/check_software_render"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:text="SW RENDER"
            android:textColor="@color/white"
            android:buttonTint="@color/imperial_blue" />

    </LinearLayout>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_change_save"
        android:layout_width="200dp"
        android:layout_height="45dp"
        android:layout_marginTop="16dp"
        android:background="@drawable/btn_retro_classic"
        android:text="@string/btn_change_slot"
        android:textColor="@color/black"
        app:layout_constraintTop_toBottomOf="@id/extra_configs_container"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_credits"
        android:layout_width="150dp"
        android:layout_height="45dp"
        android:layout_marginTop="16dp"
        android:background="@drawable/btn_retro_classic"
        android:text="@string/btn_credits"
        android:textColor="@color/black"
        app:layout_constraintTop_toBottomOf="@id/btn_change_save"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_back_config"
        android:layout_width="200dp"
        android:layout_height="60dp"
        android:layout_marginBottom="32dp"
        android:background="@drawable/btn_retro_classic"
        android:text="@string/btn_back"
        android:textColor="@color/black"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>